api-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: mop
spec:
  selector:
    app: api-server
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8000
  type: ClusterIP
